--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
+
+<a href="pogas.html">Click Here!</a>
+
+</body>
+</html>
   
 </body>
 </html>
