--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 <p>My first paragraph.</p>
 
 <a href="pogas.html">Click Here!</a>
+<img src="img_chania.jpg" alt="Flowers in Chania">
 
+</body>
+</html>
+  
 </body>
 </html>
   
